--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "MetChat",
+  "name": "LoginTest",
   "version": "0.1.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
     "start": "ng serve",
+    "build": "ng build",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
