--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,23 +1,16 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# compiled output
+# Compiled output
 /dist
 /tmp
 
-# dependencies
+# Dependencies
 /node_modules
 /bower_components
 
-# IDEs and editors
-/.idea
-/.vscode
-.project
-.classpath
-.c9/
+# IDEs and Editors
 *.launch
 .settings/
 
-# misc
+# Misc
 /.sass-cache
 /connect.lock
 /coverage/*
@@ -29,7 +22,3 @@ testem.log
 # e2e
 /e2e/*.js
 /e2e/*.map
-
-#System Files
-.DS_Store
-Thumbs.db
