--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -96,7 +96,17 @@
       <version>1.6.3</version>
       <scope>compile</scope>
     </dependency>
-    
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.3.7.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
