--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -108,6 +108,12 @@
             <version>4.3.7.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.14</version>
+        </dependency>
+
     </dependencies>
 
     <build>
